Fix compiler complaint